added author to post slug

--- a/public/posts/why-nextjs.mdx
+++ b/public/posts/why-nextjs.mdx
@@ -1,18 +1,16 @@
 ---
 title: 'Why I choose Nextjs over everything'
-summary: ' Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor illum
-  labore sit autem, nesciunt laudantium nobis eius id asperiores est,
-  fuga.'
+summary: 'Reasons why I like Next.js over plain React App and any other javascript framework'
 author: 'John Allen Delos Reyes'
 publishedAt: '01-02-2022'
-description: 'Reason why I chose NextJS other than any javascript framework'
+description: 'Reasons why I chose NextJS other than any javascript framework'
 ---
 
 ![React Startup Logo](https://res.cloudinary.com/practicaldev/image/fetch/s--UNP4ed-u--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://thepracticaldev.s3.amazonaws.com/i/pxaicsmec2pheg0jczyx.png)
 
 For a short amount time in 2020 and at web development, front-end development to be specific. I really enjoy the structures and syntax of JSX. Even though there's a lot of opinions and debate towards using React and it's JSX syntax, I reasearch a lot and made my decision to use React.
 
-### Why NextJS
+### Why [NextJS](https://nextjs.org/)
 
 I used react for a lot of my projects and came across to one of react's framework which is NextJS
 
